Work on dashboard view.

--- a/web-gui/index.html
+++ b/web-gui/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    hello
+    <ng-view></ng-view>
 </body>
 <script src="node_modules/requirejs/require.js" data-main="app/main.js"></script>
 </html>
